--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="img/ico.png" type="image/png">
     <title>
-        página de captura
+        workshop
     </title>
 </head>
 
 <body>
+    <div class="container">
+        <header>
+            <h1 class="title">PARTICIPE DO WORKSHOP QUE VAI MUDAR O SEI NEGÓCIO</h1>
+        </header>
+    </div>
     
 </body>
 </html>
