--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
             <h1 class="title">PARTICIPE DO WORKSHOP QUE VAI MUDAR O SEI NEGÓCIO</h1>
         </header>
 
-        <div>
-            <section class="formContainer">
-                <h2>GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKTING DA ATUALIDADE</h2>
+        <section>
+            <div class="formContainer">
+                <h2 class="mb">GARANTA O SEU LUGAR NO <br> 
+                    WORKSHOP DO MAIOR <br>
+                    ESPECIALISTA EM <br>
+                    MARKTING DA <br>
+                    ATUALIDADE</h2>
 
-                <p>neste evento voce vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte.</p>
+                <p class="mb">neste evento voce vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte.</p>
 
                 <form method="post">
 
@@ -38,9 +42,9 @@
                     <input type="submit" value="INSCREVA-SE">
 
                 </form>
-            </section>
+            </div>
             
-        </div>
+        </section>
     </div>
     
 </body>
