--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
             </div>
             
         </section>
+        <footer>
+            <img class="picture" src="img/face.jpg" alt="palestrante">
+            <div class="description">
+                <h3>O Palestrante</h3>
+                <p>
+                    Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional.
+                    Prepara-se para sair do evento com uma nova visão do que é possivel ser feito para o seu negócio decolar               
+                </p>
+
+                <p>
+                    Formado em marketing pela universidade xyz e fundador da MarkUp, a empresa vencedora dos ultimos 5 premios MarketingBr.
+                </p>
+            </div>
+        </footer>
     </div>
     
 </body>
